# hoops

./: CMakeLists.txt  README.md  accumulator.h  main.cpp
src/: accumulator.h  bball_page.cpp  bball_page.h  content_loader.h  content_page.h  env_namespace.cpp  env_namespace.h  gumbo_scraper.cpp  gumbo_scraper.h  hoops_engine.cpp  hoops_engine.h  hoops_env.cpp  hoops_env.h  index_loader.cpp  index_loader.h  loader.cpp  loader.h  meta_section_parser.cpp  meta_section_parser.h  page_reader.h  player_extractor.h  player_metadata.cpp  player_metadata.h  profile_loader.cpp  profile_loader.h  scraper_wrapper.cpp  scraper_wrapper.h  stats_adapters.cpp  stats_adapters.h  util.cpp  util.h  util.hpp
src/adapters/: advanced_adapter.cpp  advanced_adapter.h  advanced_playoffs.cpp  advanced_playoffs_adapter.cpp  advanced_playoffs_adapter.h  attribute_adapter.cpp  attribute_adapter.h  attribute_adapter_impl.cpp  attribute_adapter_impl.h  attribute_interface.cpp  attribute_interface.h  game_highs_adapter.cpp  game_highs_adapter.h  game_highs_playoffs_adapter.cpp  game_highs_playoffs_adapter.h  per_100_adapter.cpp  per_100_adapter.h  per_100_playoffs_adapter.cpp  per_100_playoffs_adapter.h  per_36_adapter.cpp  per_36_adapter.h  per_36_playoffs_adapter.cpp  per_36_playoffs_adapter.h  per_game_adapter.cpp  per_game_adapter.h  per_game_playoffs_adapter.cpp  per_game_playoffs_adapter.h  play_adapter.cpp  play_adapter.h  play_playoffs_adapter.cpp  play_playoffs_adapter.h  shooting_adapter.cpp  shooting_adapter.h  shooting_playoffs_adapter.cpp  shooting_playoffs_adapter.h  totals_adapter.cpp  totals_adapter.h  totals_all_star_adapter.cpp  totals_all_star_adapter.h  totals_playoffs_adapter.cpp  (+1 more)
src/commands/: command.cpp  command.h  compare_command.cpp  compare_command.h  fun_command.cpp  fun_command.h  help_command.cpp  help_command.h  pull_command.cpp  pull_command.h  quit_command.cpp  quit_command.h
src/models/: input_command.cpp  input_command.h
